--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,7 +25,7 @@ keyring = "2"
 once_cell = "1.21.3"
 sha1 = "0.10.6"
 hex = "0.4.3"
-openssl = { version = "0.10" } #, features = ["vendored"] }
+openssl = { version = "0.10", features = ["vendored"] }
 plist = { version = "1.7.2" }
 zip = { version = "4.1.0", default-features = false, features = ["deflate"] }
 isideload = { version = "0.1.4", features = ["vendored-botan", "vendored-openssl"] }
