--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -41,6 +41,7 @@ wslpath2 = "0.1.3"
 tokio = { version = "1.47.0", features = ["process"] }
 tokio-tungstenite = "0.27.0"
 futures-util = "0.3.31"
+sysinfo = "0.37.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
