--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@codingame/esbuild-import-meta-url-plugin": "^1.0.3",
     "@codingame/monaco-vscode-api": "18.1.0",
     "@codingame/monaco-vscode-languages-service-override": "18.1.0",
+    "@codingame/monaco-vscode-model-service-override": "18.1.0",
     "@codingame/monaco-vscode-swift-default-extension": "18.1.0",
     "@codingame/monaco-vscode-textmate-service-override": "18.1.0",
     "@codingame/monaco-vscode-theme-defaults-default-extension": "18.1.0",
     "@codingame/monaco-vscode-theme-service-override": "18.1.0",
     "@codingame/monaco-vscode-views-service-override": "^18.1.0",
-    "@codingame/monaco-vscode-model-service-override": "18.1.0",
     "@devbookhq/splitter": "^1.4.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -30,6 +30,7 @@
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-opener": "~2",
+    "@tauri-apps/plugin-os": "^2.3.0",
     "@tauri-apps/plugin-shell": "~2",
     "@tauri-apps/plugin-store": "~2",
     "ansi-to-html": "^0.7.2",
