--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,6 +42,7 @@ tokio = { version = "1.47.0", features = ["process"] }
 tokio-tungstenite = "0.27.0"
 futures-util = "0.3.31"
 sysinfo = "0.37.0"
+tauri-plugin-os = "2"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
