--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,3 +47,6 @@ tauri-plugin-os = "2"
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-cli = "2"
