--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "y-code",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "bump-patch": "npx tauri-version --no-git --no-lock patch",
+    "bump-minor": "npx tauri-version --no-git --no-lock minor",
+    "bump-major": "npx tauri-version --no-git --no-lock major"
   },
   "dependencies": {
     "@codingame/esbuild-import-meta-url-plugin": "^1.0.3",
