--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,10 @@ jobs:
         run: |
           choco install strawberryperl make --no-progress
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 23
+
       - name: Install frontend dependencies
         run: npm ci
 
