--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Cache Rust and npm dependencies
+      - name: Cache Rust and bun dependencies
         uses: actions/cache@v4
         with:
           path: |
@@ -52,12 +52,12 @@ jobs:
         run: |
           choco install strawberryperl make --no-progress
 
-      - uses: actions/setup-node@v4
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: 23
+          bun-version: latest
 
       - name: Install frontend dependencies
-        run: npm ci
+        run: bun i --frozen-lockfile
 
       - uses: tauri-apps/tauri-action@v0
         env:
