--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -53,3 +53,4 @@ custom-protocol = ["tauri/custom-protocol"]
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-cli = "2"
+tauri-plugin-updater = "2"
