--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.0.2",
-    "@tauri-apps/api": "~2",
+    "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-cli": "^2.4.0",
-    "@tauri-apps/plugin-dialog": "~2",
-    "@tauri-apps/plugin-fs": "~2",
-    "@tauri-apps/plugin-opener": "~2",
+    "@tauri-apps/plugin-dialog": "^2",
+    "@tauri-apps/plugin-fs": "^2",
+    "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-os": "^2.3.0",
     "@tauri-apps/plugin-process": "^2.3.0",
-    "@tauri-apps/plugin-shell": "~2",
-    "@tauri-apps/plugin-store": "~2",
-    "@tauri-apps/plugin-updater": "~2",
+    "@tauri-apps/plugin-shell": "^2",
+    "@tauri-apps/plugin-store": "^2",
+    "@tauri-apps/plugin-updater": "^2",
     "ansi-to-html": "^0.7.2",
     "async-mutex": "^0.5.0",
     "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@~20.2.1",
@@ -53,7 +53,7 @@
     "vscode-ws-jsonrpc": "^3.4.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "~2",
+    "@tauri-apps/cli": "^2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/vscode": "^1.102.0",
