--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,39 +8,39 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "2.4.0", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = ["devtools"] }
+tauri = { version = "2.8.3", features = ["devtools"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-shell = "2"
-tauri-plugin-fs = { version = "2", features= ["watch"] }
-tauri-plugin-dialog = "2"
-tauri-plugin-store = "2"
-tauri-plugin-opener = "2.5"
-tauri-plugin-os = "2"
-tauri-plugin-process = "2"
-idevice = { version = "0.1.39", features = ["usbmuxd", "syslog_relay"] }
+tauri-plugin-shell = "2.3.0"
+tauri-plugin-fs = { version = "2.4.2", features= ["watch"] }
+tauri-plugin-dialog = "2.3.3"
+tauri-plugin-store = "2.4.0"
+tauri-plugin-opener = "2.5.0"
+tauri-plugin-os = "2.3.1"
+tauri-plugin-process = "2.3.0"
+idevice = { version = "0.1.40", features = ["usbmuxd", "syslog_relay", "core_device_proxy", "tunnel_tcp_stack", "rsd", "core_device", "dvt"] }
 futures = "0.3.31"
-keyring = "2"
+keyring = "3"
 once_cell = "1.21.3"
 sha1 = "0.10.6"
 hex = "0.4.3"
 openssl = { version = "0.10", features = ["vendored"] }
-plist = { version = "1.7.2" }
-zip = { version = "4.1.0", default-features = false, features = ["deflate"] }
-isideload = { version = "0.1.6", features = ["vendored-botan", "vendored-openssl"] }
-uuid = "1.17.0"
+plist = { version = "1.7.4" }
+zip = { version = "4.5", default-features = false, features = ["deflate"] }
+isideload = { version = "0.1.8", features = ["vendored-botan", "vendored-openssl"] }
+uuid = "1.18.0"
 walkdir = "2.5.0"
 dircpy = "0.3.19"
 tar = "0.4.44"
-reqwest = "0.12.22"
+reqwest = "0.12.23"
 flate2 = "1.1.2"
 regex = "1"
-toml = "0.9.2"
+toml = "0.9.5"
 wslpath2 = "0.1.3"
-tokio = { version = "1.47.0", features = ["process"] }
+tokio = { version = "1.47.1", features = ["process"] }
 tokio-tungstenite = "0.27.0"
 futures-util = "0.3.31"
 sysinfo = "0.37.0"
@@ -52,5 +52,5 @@ image = "0.25.6"
 custom-protocol = ["tauri/custom-protocol"]
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-cli = "2"
-tauri-plugin-updater = "2"
+tauri-plugin-cli = "2.4.0"
+tauri-plugin-updater = "2.9.0"
