--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ tauri-plugin-store = "2.4.0"
 tauri-plugin-opener = "2.5.0"
 tauri-plugin-os = "2.3.1"
 tauri-plugin-process = "2.3.0"
-idevice = { version = "0.1.40", features = ["usbmuxd", "syslog_relay", "core_device_proxy", "tunnel_tcp_stack", "rsd", "core_device", "dvt"] }
+idevice = { version = "0.1.40", features = ["usbmuxd", "syslog_relay", "core_device_proxy", "tunnel_tcp_stack", "rsd", "core_device", "dvt", "mobile_image_mounter", "tss"] }
 futures = "0.3.31"
 keyring = "2"
 once_cell = "1.21.3"
