--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
             ~/.cargo/git
             src-tauri/target
             node_modules
-          key: ${{ runner.os }}-crosscode-${{ hashFiles('**/Cargo.lock', 'package-lock.json') }}
+          key: ${{ matrix.platform }}-crosscode-${{ hashFiles('**/Cargo.lock', 'package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-crosscode-
 
