--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tauri-apps/plugin-shell": "^2",
     "@tauri-apps/plugin-store": "^2",
     "@tauri-apps/plugin-updater": "^2",
+    "@xterm/xterm": "^5.5.0",
     "ansi-to-html": "^0.7.2",
     "async-mutex": "^0.5.0",
     "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@~20.2.1",
