--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,6 +47,7 @@ tokio-util = "0.7.16"
 image = "0.25.6"
 rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
 unxip-rs = "0.1.1"
+pty-process = { version = "0.5.3", features = ["async"] }
 
 [target.'cfg(unix)'.dependencies]
 sdkmover = { path = "../sdkmover" }
