--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,17 +21,12 @@ tauri-plugin-store = "2.4.0"
 tauri-plugin-opener = "2.5.0"
 tauri-plugin-os = "2.3.1"
 tauri-plugin-process = "2.3.0"
-idevice = { version = "0.1.42", features = ["usbmuxd", "syslog_relay", "core_device_proxy", "tunnel_tcp_stack", "rsd", "core_device", "dvt", "mobile_image_mounter", "tss"] }
+idevice = { version = "0.1.47", features = ["usbmuxd", "syslog_relay", "core_device_proxy", "tunnel_tcp_stack", "rsd", "core_device", "dvt", "mobile_image_mounter", "tss", "ring"], default-features = false}
 futures = "0.3.31"
 keyring = "2"
 once_cell = "1.21.3"
-sha1 = "0.10.6"
-hex = "0.4.3"
-openssl = { version = "0.10", features = ["vendored"] }
-plist = { version = "1.7.4" }
 zip = { version = "4.5", default-features = false, features = ["deflate"] }
-isideload = { version = "0.1.10", features = ["vendored-botan", "vendored-openssl"] }
-uuid = "1.18.0"
+isideload = { version = "0.1.16", features = ["vendored-openssl"] }
 walkdir = "2.5.0"
 dircpy = "0.3.19"
 tar = "0.4.44"
@@ -40,12 +35,10 @@ flate2 = "1.1.2"
 regex = "1"
 toml = "0.9.5"
 tokio = { version = "1.47.1", features = ["process"] }
-tokio-tungstenite = "0.27.0"
 futures-util = "0.3.31"
 sysinfo = "0.37.0"
 tokio-util = "0.7.16"
 image = "0.25.6"
-rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
 unxip-rs = "0.1.1"
 
 [target.'cfg(unix)'.dependencies]
