--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ sysinfo = "0.37.0"
 tokio-util = "0.7.16"
 image = "0.25.6"
 unxip-rs = "0.1.1"
+tokio-tungstenite = "0.28.0"
 
 [target.'cfg(unix)'.dependencies]
 sdkmover = { path = "../sdkmover" }
